deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  generation: 125
  name: heat-test-report
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: heat-test-report
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: heat-test-report
    spec:
      containers:
        - name: heat-test-report
          image: #IMAGE_NAME
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
      dnsPolicy: ClusterFirst
      imagePullSecrets:
        - name: registry-secret-topjoy
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: { }
      terminationGracePeriodSeconds: 30
      volumes:
        - hostPath:
            path: /etc/localtime
            type: ""
          name: timezone
        - name: app-logs
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: heat-test-report
spec:
  selector:
    app: heat-test-report
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  generation: 5
  name: ingress
spec:
  tls:
    - hosts:
        - heat-test-report.youle.game
      secretName: https-secret-youle-game
  rules:
    - host: heat-test-report.youle.game
      http:
        paths:
          - backend:
              serviceName: heat-test-report
              servicePort: 80
            path: /
